# Ethno-Med-AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  操作指南.md  操作指南.txt
.github/workflows/: ci.yml  docker.yml
RAG/: __init__.py  build_index.py  requirements.txt  知识向量库构建.py
RAG/datasets/彝族/: 彝族_彝族医学的主要疾病.docx  彝族_彝族医药的历史.docx  彝族_彝族医药的外治法.docx  彝族_彝族对人体与生命的认识.docx  彝族_彝族的文化历史.docx  彝族_彝族药.docx  彝族_彝族药方.docx  彝族_疾病的治则与治法.docx  彝族_疾病的病因与诊断.docx  彝族_目录.docx
RAG/datasets/羌族/: 羌族_保健.docx  羌族_特色疗法.docx  羌族_羌医药历史.docx  羌族_羌医药理论基础docx.docx  羌族_羌药药剂.docx
RAG/datasets/藏族/: 藏族_丰富多采的治疗.docx  藏族_主要的医家和医著.docx  藏族_动物药.docx  藏族_国外藏医学研究.docx  藏族_展望.docx  藏族_悠久的历史.docx  藏族_植物药.docx  藏族_目录.docx  藏族_矿物药.docx  藏族_药物复合名称简释.docx  藏族_藏医学的理论体系.docx  藏族_藏医教育.docx  藏族_藏医的临床学.docx  藏族_藏医的医德.docx  (+11 more)
RAG/vector_store/: 彝族_metadata.npy  缇屾棌_index.index  羌族_metadata.npy  藏族_metadata.npy  褰濇棌_index.index
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  health.py  models.py
backend/app/schemas/: chat.py
backend/app/services/: embeddings.py  graph.py  llm_factory.py  rag_chain.py  reranker.py  retrievers.py  vector_store.py
backend/app/utils/: ethnic_detector.py
backend/tests/: conftest.py  test_ethnic_detector.py  test_health_api.py  test_models_api.py  test_schemas.py
docs/: 操作说明.md
frontend/: Dockerfile  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
web/backend/: Dockerfile  backend.py
web/frontend/: dockerfile  frontend.py
(+11 files in other folders)
