[tool.poetry]
name = "ethno-med-ai-backend"
version = "0.1.0"
description = "EthnoMedAI Backend - 少数民族医药问答系统"
authors = ["蒙奇_D_路飞 <2045705885@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic-settings = "^2.6"
langchain = "^0.3"
langchain-core = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
langgraph = "^0.2"
dashscope = "^1.22"
faiss-cpu = "^1.9"
jieba = "^0.42"
numpy = "^1.26"
python-dotenv = "^1.0"
sse-starlette = ">=2.2,<4.0"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.28"
ruff = "^0.8"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
